spec/.test/config/invalid/entry/extensions.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [
        'id1' => function () {},
        'id2' => 1,
        'id3' => function () {},
    ],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
];
